# mma

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
cmake/: CXXFeatures.cmake  SetWarnings.cmake
src/gcmma/: CMakeLists.txt  GCMMASolver.cpp  GCMMASolver.h
src/mma/: CMakeLists.txt  MMASolver.cpp  MMASolver.h
tests/: CMakeLists.txt  main.cpp  pairwise.cpp  toy.cpp  triangle.cpp
